Fixing alignment of todo doing done

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body
     width:15em;
     display:inline-block;
     margin:1em;
+    vertical-align: top;
 }
 .col h1 {
     margin:0;
